src/test/ui/issues/issue-65634-raw-ident-suggestion.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/issue-65634-raw-ident-suggestion.rs:21:13
   |
LL |     r#fn {}.r#struct();
   |             ^^^^^^^^ multiple `r#struct` found
   |
note: candidate #1 is defined in an impl of the trait `async` for the type `r#fn`
  --> $DIR/issue-65634-raw-ident-suggestion.rs:4:5
   |
LL |     fn r#struct(&self) {
   |     ^^^^^^^^^^^^^^^^^^
   = help: to disambiguate the method call, write `async::r#struct(r#fn {})` instead
note: candidate #2 is defined in an impl of the trait `await` for the type `r#fn`
  --> $DIR/issue-65634-raw-ident-suggestion.rs:10:5
   |
LL |     fn r#struct(&self) {
   |     ^^^^^^^^^^^^^^^^^^
   = help: to disambiguate the method call, write `await::r#struct(r#fn {})` instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
